--- a/artikulua.tex
+++ b/artikulua.tex
@@ -125,6 +125,10 @@ IXA NLP Group, University of the Basque Country UPV/EHU\\
 \indent Honela, Twitter sare sozialean euskal komunitatearen inguruko ikerketa burutu da, sare sozialak informazio iturri garrantzitsu bat direla frogatuz. Era honetan, euskal txiolarien komunitatearen euskarazko 6 milioi txio baino gehiago lortu dira, ia 8000 erabiltzaile ezberdinetatik. Datu-base erraldoi honetatik (Big Data), interpretagarria den informazioa erauztea izango da asmoa, desegituratutako datu hauek ulergarri bihurtuz (Data Mining). Behin datuak erauzi direla, hurrengo pausua gazteak detektatzean oinarrituko da, adina bezalako ezaugarri demografikoak iradokitzeko saiakera eginez. Adinaren identifikazio automatikoaren bideragarritasun falta ikusita, hurbilpen bat egitea erabaki da, txioaren idazteko eran oinarritu gara erabiltzaile gazteak eta helduak ezberdintzeko hizkuntza ez-formalaren erabilera maiztasunean oinarrituz. Ezberdintze hau burutzea garrantzitsua da, gazteen errealitatea ezagutzea lehentasun bat baita lan honetan, bai gazteen eduki eta harremanak ezagutzeko, eta baita, ezkutuan dauden ezaugarri demografikoak antzemateko kapazitatea badagoela frogatzeko ere. Gazteak eta helduak sailkatzeko hurbilpena burututa egonda, bi izango dira ikerketa honetan argitu nahiko diren inkognitak, euskaldunek zertaz hitz egiten duten eta norekin harremantzen diren. Alde batetik, euskal txiolariek zein gairen inguruan hitz egiten duten ezagutzea izango da lehendabiziko asmoa, komunitate honen gairik errepikatuenak zeintzuk diren argituz. Honetarako, Hizkuntzaren prozesamenduko teknikak (NLP) erabiliko dira, testuetatik informazioa ateratzeko. Beste aldetik, euskal txiolariak nola harremantzen diren ezagutzea izango da bigarren asmoa, egindako birtxioetan oinarrituta, komunitateak zehaztu eta hauetako pertsona garrantzitsuak identifikatuz.\\
 \indent Gizarte-zientzien eta konputazio-zientzien arteko konbinazioan kokatzen da lan honen ekarpen nagusia, aurrerapen teknologikoetan eta informazio mugagabean oinarritutako gizarte likidoa \citep{bauman2015modernidad} interpretatzen eta ulertzen lagunduko duen sinbiosia. Interneteko sareari esker, gizartea hobeto ulertzeko teknikak garatzeko orduan mugarri izan nahi du lan honek, gizarte-ikerkuntzan ireki den bide berri honetan lehenengo pausoak emanez. Lehenik eta behin, bilketan iraultza txiki bat piztea lortu da, interneteko datu-iturriak ustiatzeari esker, datu-iturri mugagabe bati ateak irekiz. Gizarte zientzietan datuak lortzea gutxi batzuen esku egon da beti suposatzen duen kostu altuagatik, baina Twitterren adibidez, Instagramen edo Facebooken ez bezala, edozeinek eskuratu ditzake datuak, informazioaren demokratizazio bat emanez. Hala ere, unibertsoa sare sozial zehatz honen erabiltzaileetara mugatzen da, iturri masiboagoak irekitzearen beharra dagoela azpimarratuz. Bigarrenik, datuen prozesaketan ere, hainbat teknika berritzaile aplikatzearen abantailak ikusi ahal izan dira. Zehatzago esanda, sare sozialetako erabiltzaile ezberdinen idatzizko adierazpen oinarrituta, zertaz hitz egiten duten eta nola harremandu diren antzematea lortu da. Honez gain, Ikasketa Automatikoan oinarritutako teknikei esker, ezaugarri demografikoak iradokitzeko ahalmena ere garatu da. Hau da, erabiltzaileen nolakotasunean oinarrituta, adina bezalako ezaugarri demografikoak intuitzeko kapaza den sistema bat garatu da. Honi esker, gizarte ikerlariontzat oinarrizkoak diren datuak (demografikoak kasu) igartzeko kapazitatea badagoela erakutsi da, datuak eskuragarri ez edukitzearen arazoa saihestuz. Hirugarrenik eta azkenik, datuen interpretagarritasuna errazteko asmoarekin, erabilitako teknikek bistaratze intuitibo eta grafiko bat izango dute, irudien laguntza izanik.
 
+The work presented in this paper consists of the following main steps. First, we will identify the relevant Basque Twitter users. Second, a large corpus of tweets will be extracted using the identified users' timelines. Third, we will classify users in terms of life stage (adult/young) by classifying the writing style of the tweets in their timelines as \emph{formal} or \emph{informal}. Five different classification methods will be investigated, including the use of machine learning techniques based on both feature-based and neural network architectures. We will use the classifier with the best results in order to label the large corpus of Basque tweets by their writing style thereby classifying their users as in terms of \emph{young} or \emph{adult}. In the final step, this classification will be used to investigate the most relevant topics among users of Twitter writing in Basque as well as for researching the social relations that emerge between each user type (young or adult). The final result will be a comprehensive sociological picture (automatically obtained) of the most important aspects within the community of Twitter users that use Basque for communication.
+
+\subsection{Contributions}\label{sec:contributions}
+
 
 
 \section{Related Work}\label{sec:background}
@@ -186,26 +190,6 @@ Extracting information from huge amounts of unstructured text is the aim of topi
 \subsection{Relations}\label{sec:connections_background}
 
 There are several studies that have tried to identify different communities based on retweets. Among these, one can find studies about political polarization \citep{conover2011political}, political affiliation detection \citep{pennacchiotti2011democrats} or even studies about identifying communities in movements for independence \citep{zubiaga2017stance}. In these studies, based on the retweets made by the user, it shows that there is the possibility of identifying communities or groups. Therefore, in this specific work, similar methodologies will be used to predict how communities are formed and how they are related.
-
-\section{Methodology}\label{sec:methodology}
-
-To investigate the reality of young Basque Twitter users, the study is going to be divided into four different steps. The first step consist on identifying Basque Twitter users and extracting the data from this Social Network. After that, as second step, Basque Twitter users have been classified between adult and young users, based on the stile of the written tweet. Once basque Twitter users are separated between young and adults, we will try to find out the topics and relations of each of the groups. To find out the topics of these communities, we will take into account the personal tweets in basque of each user. On the other hand, to find out the relations, we will take into account the retweets in basque of each user. For each task indicated, a specific methodology will be used, as will be demonstrated below.
-
-\paragraph{Data Extraction}
-
-The first step consists on defining the social universe to investigate. The social universe is defined as all Twitter users who write in basque. With the purpose of identifying those basque writers in the whole Twitter network, a shortcut will be used, the list of Umap.eus\footnote{\url{https://umap.eus/}}. Once we know which users data extract, tweepy \citep{roesslein2009tweepy} package from Python will be used. Thanks to this package it will be possible to extract all the necessary information from each basque Twitter user.
-
-\paragraph{Young/Adult Identifier}
-
-The aim of this section is identifying young basque users, differentiating young users from the adult ones. This classification will not be made according to age, but based on the content of the messages, by which the text of personal tweets will be taken as a reference. Based on the text of the tweets, each tweet of a user is classified as formal or informal, depending on the writing style. When the concentration of informal tweets is high, it will be considered a young user, since young people have a more informal style \citep{nguyen2013old}. For that purpose, a small corpus has been labeled, labeling manually over 1,000 tweets as informal or formal. Three different methods have been used to train the classifier that will distinguish between formal and informal tweets, a non-supervised statistical model, machine learning and IXA pipes document classifier.
-
-\paragraph{Topics}
-
-On the one hand, for identifying the topics which basque users speak of, personal tweets in Basque language have been used. To do this, the Topic-Modeling technique is used, applying the LDA algorithm for that purpose. Specifically, gensim \citep{rehurek2010software} package has been used for applying LDA, so LDA can be applied to the obtained text from tweets. For an intuitive display, the \textit{LDAvis} method \citep{sievert2014ldavis} is used. This method publishes results as images, which helps interpreting the results.
-
-\paragraph{Connections}
-
-On the other hand, to know what the way of relating of the users is, retweets will be used. For that purpose, a graph based on the retweets will be used, the nodes being the users and each edges a retweet. For the creation of the graph the Ghepi program \citep{bastian2009gephi} has been used. Apart from that, modularity \citep{blondel2008fast} has been used to identify the subgroups of the graph that would represent different communities.
 
 
 % #########################################################
@@ -413,7 +397,7 @@ Flair embeddings have been successfully applied to sequence labelling tasks obta
 
 \subsection{Experimental Results}\label{sec:experimental-results}
 
-In order to finish our experiments, we used the training set to trained the systems that obtained best cross-validation results and evaluated them on the gold standard test set. Thus, we tested the following systems: the SVM model with FastText word embeddings, the perplexity-based distance method, ixa-pipe-doc and Flair. Table \ref{tab:testresults} reports the final results of our experiments to obtain a good classifier of Basque tweets according to writing style (formal/informal).
+In order to finish our experiments, we used the full training set for the systems that obtained best cross-validation results and evaluated them on the gold standard test set. Thus, we tested the following systems: the SVM model with FastText word embeddings, the perplexity-based distance method, ixa-pipe-doc and Flair. Table \ref{tab:testresults} reports the final results of our experiments to obtain a good classifier of Basque tweets according to writing style (formal/informal).
 
 \begin{table}[H]
   \centering
@@ -516,7 +500,7 @@ If we take a look at the tweets written only in Basque, we find that 530.226 per
 
 \section{Topics}\label{sec:topics}
 
-The aim of this section is to detect the most frequent topics of Twitter users writing in Basque. In order to do so, we start with the personal tweets of users classified as adults and young in the previous section using the classifier developed in Section \ref{sec:ixa}. As shown by Table \ref{tab:largecorpusdata}, more than 3 million personal tweets in Basque were obtained. On the one hand, 2,634,534 personal tweets will be used to predict adult topics and, on the other hand, 530,226 personal tweets for young users. We will apply topic modelling via Latent Dirichlet Allocation (LDA) \cite{blei2003latent} in order to infer relevant topics per type of user from unstructured data.
+The aim of this section is to detect the most frequent topics of Twitter users writing in Basque. In order to do so, we start with the personal tweets of users classified as adults and young in the previous section using the classifier developed in Section \ref{sec:ixa}. As shown by Table \ref{tab:largecorpusdata}, more than 3 million personal tweets in Basque were obtained. On the one hand, 2,634,534 personal tweets will be used to predict adult topics and, on the other hand, 530,226 personal tweets for young users. We will apply topic modelling via Latent Dirichlet Allocation (LDA) \cite{blei2003latent} in order to infer relevant topics per type of user from unstructured data. Specifically, we used the implementation of LDA provided by the gensim package \cite{rehurek2010software}.
 
 Topic modeling is a commonly used tool in the field of text mining. With this technique, words are grouped or clustered according to their context, thereby generating more general contents or concepts via the clustered words and allowing to identify general topics from specific words. We apply this technique to identify the main subjects that appear in the Basque users' tweets. In order words, LDA  makes it possible to classify events that are observable in latent or hidden clusters. This is possible thanks to the many hidden features, such as the similarity of words.
 
