--- a/artikulua.tex
+++ b/artikulua.tex
@@ -64,6 +64,10 @@
 \usepackage{subcaption}
 \usepackage{todonotes}
 
+\usepackage{float}
+\usepackage{subfig}
+\usepackage[demo]{graphicx}
+
 %=================================================================
 %% Please use the following mathematics environments: Theorem, Lemma, Corollary, Proposition, Characterization, Property, Problem, Example, ExamplesandDefinitions, Hypothesis, Remark, Definition
 %% For proofs, please use the proof environment (the amsthm package is loaded by the MDPI class).
@@ -279,24 +283,33 @@ In order to classify tweets as \emph{formal} or \emph{informal}, we will calcula
 Our method to calculate such threshold proceeds in the following manner. First, we build a 7-gram character-based language model using the data from a corpus composed of texts from the Basque  Egunkaria and Berria newspapers. Second, we take the tweets in the training set (65\% of the dataset) and classify each of them according to the perplexity-based distance with respect to the language model. We tried every value in the [0,10] range
 with an increment of 0.1 as threshold. Third, we computed precision, recall and accuracy comparing the prediction of the threshold according to the perplexity value with respect to the gold-standard labels in the training data. Finally, the threshold chosen will be the value in which all the three metrics converge. As shown by Figure \ref{fig:threshold}, we found out that the best threshold value was around 4.4. We will use this value in order to evaluate this approach in Section \ref{sec:experimental-results}.
 
+%\begin{figure}[H]
+%  \centering
+%  \begin{subfigure}[b]{0.49\linewidth}
+%    \includegraphics[width=\linewidth]{precision}
+%    \caption{Precision.}\label{fig:precision}
+%  \end{subfigure}
+%  \begin{subfigure}[b]{0.49\linewidth}
+%    \includegraphics[width=\linewidth]{recall}
+%    \caption{Recall.}\label{fig:recall}
+%  \end{subfigure} 
+%  \begin{subfigure}[b]{0.49\linewidth}
+%    \includegraphics[width=\linewidth]{accuracy}
+%    \caption{Accuracy.}\label{fig:acc}
+%  \end{subfigure}
+%  \begin{subfigure}[b]{0.49\linewidth}
+%    \includegraphics[width=\linewidth]{denaperp}
+%    \caption{Optimal threshold value on the training data.}\label{fig:threshold}
+%  \end{subfigure}
+%\end{figure}
+
 \begin{figure}[H]
   \centering
-  \begin{subfigure}[b]{0.48\linewidth}
-    \includegraphics[width=\linewidth]{precision}
-    \caption{Precision.}\label{fig:precision}
-  \end{subfigure}
-  \begin{subfigure}[b]{0.48\linewidth}
-    \includegraphics[width=\linewidth]{recall}
-    \caption{Recall.}\label{fig:recall}
-  \end{subfigure}
-  \begin{subfigure}[b]{0.48\linewidth}
-    \includegraphics[width=\linewidth]{accuracy}
-    \caption{Accuracy.}\label{fig:acc}
-  \end{subfigure}
-  \begin{subfigure}[b]{0.48\linewidth}
-    \includegraphics[width=\linewidth]{denaperp}
-    \caption{Optimal threshold value on the training data.}\label{fig:threshold}
-  \end{subfigure}
+    \subfloat[Precision.]{\includegraphics[width = .5\linewidth]{precision}} 
+    \subfloat[Recall.]{\includegraphics[width = .5\linewidth]{recall}}\\
+    \subfloat[Accuracy.]{\includegraphics[width = .5\linewidth]{accuracy}}
+    \subfloat[Optimal threshold value on the training data.]{\includegraphics[width = .5\linewidth]{denaperp}}
+%\caption{Perplexity}  
 \end{figure}
 
 Table \ref{tab:perplexitytrain} displays the results of classifying the tweets in the training data using perplexity-based distance using the value 4.4 as threshold. The obtained overall accuracy using 4.4 as threshold was 0.831.
@@ -621,6 +634,20 @@ Once the graphs were created, we proceed as follows: First, we divided each grap
 
 \noindent \textbf{CAN WE HAVE A PICTURE HERE?}
 
+\begin{figure}[H]
+  \centering
+  \begin{subfigure}[b]{0.49\linewidth}
+    \includegraphics[width=\linewidth]{harremanak_heldu/c1for}
+    \caption{Adults, most important community (Nationalist left)}
+  \end{subfigure}
+  \begin{subfigure}[b]{0.49\linewidth}
+    \includegraphics[width=\linewidth]{harremanak_gazte/c1inf}
+    \caption{Youngs, most important community (Sports)}
+  \end{subfigure}
+  \caption{Adult and Young Basque speakers' relations in Twitter}
+  \label{fig:hd ha2}
+\end{figure}
+
 Once the two independent network graphs, one for young users and another one for adults, were created, we split each network into subgroups to analyze how the communities or subgroups inside each group are formed. The subgroups are defined based on the most important nodes of each one. The aim is to uncover, via their retweets, the relations that are created between the Basque users of Twitter.
 
 \subsection{Relationships in the Adult Graph}\label{sec:sis harr}
@@ -654,6 +681,7 @@ Table \ref{tab:tab harr hld} shows the five main subgroups derived from the grap
 \item \textbf{Basque tweeters} (13.10\%): In this last subgroup, we would have common Basque users of Twitter, which are important within the Basque community due to their large number of follower or retweets.
 \end{itemize}
 
+\todo{Aurreko tituluan "Relationships in the Adult Graph" daukagu, hemen Subgraph ordez Graph jarriko nuke ere}
 \subsection{Relationships in the Young Subgraph}\label{sec:relat-young-subgr}
 
 The subgroups in the graph of \textbf{young} users (see Table \ref{tab:tab harr gzt}) display both similarities and differences with respect to the adult graph.
