--- a/artikulua.tex
+++ b/artikulua.tex
@@ -616,11 +616,11 @@ Thus, in the adult graph we identified 33,277 nodes whereas  24,987 nodes were i
 \begin{figure}[H]
   \centering
   \begin{subfigure}[b]{0.49\linewidth}
-    \includegraphics[width=\linewidth]{harremanak_heldu/c1for}
+    \includegraphics[width=\linewidth]{adult_graphs/c1for}
     \caption{Most important community (Nationalist left) in the adult graph.}
   \end{subfigure}
   \begin{subfigure}[b]{0.49\linewidth}
-    \includegraphics[width=\linewidth]{harremanak_gazte/c1inf}
+    \includegraphics[width=\linewidth]{young_graphs/c1inf}
     \caption{Most important community (Sports) in the young graph.}
   \end{subfigure}
   \caption{Example graphs of the two most important subgroups within the adult and young graphs.}
